(#742) Mention tunnelling ability in item descriptions.
(#747) ui-birth.c needs to handle going directly from character sheet to sex prompt.
(#748) Allow Rings of Delving to activate.
(#755) Fix pseudo-id of branded ammo, so already-known ammo doesn't get pseudo-ID'd.
(#766) Scrolls of trap creation now longer crash in town.
(#767) Hitpoint warning now accepts only numbers from 0-9.
(#773) General Store now restocks like other stores (e.g. more food will appear without you having to buy out all the food).
(#781) Remove the cap on potions of experience -- they always give 100k XP now.
(#799) Elessar and Evenstar now show the right recharge times.
Fix bug with rods of treasure location needing ID.
Fix birth_money so that in point-based it still gives you 500AU.
Fix double-resist damage.
Fix pluralisation of 'staves'.
Add Word of Recall status to the status line.
Tone down the frequency of {excellent} items somewhat, and tweak {good} frequency.
Tone down detection area a wee bit.
Remove the 'K' command and instead put a prompt after the 'destroy' prompt.
Weaken PDSM just a tad.
Enchant Armour scrolls ID when reading them, not when they are successfully read.
Fix artifact recharge times.
Fix displaying the special rings in the object knowledge viewer.
Fix randart saving/loading.
Tone down Troll Priest HP.
Include criticals damage in the object description's average display.
Make Kavlax 'scary dark like Anclagon'.
Curses on jewelry only happen with negative-pval items.  (temporary)
Only wake monsters on attack if you're not "too afraid to attack".
A few fixes to the visual editor on the knowledge screens.
Add yeeks to the monster knowledge browser.

Unix ports:
Update angband man page.

Curses port:
(#666) Fix out-of-bounds memory access
(#678) Don't leave terminal colours broken on quitting
Disable ^Y on BSDs, since it clashes with roguelike keyset
Add pseudo-graphics support
Use curses to parse keys, which is more portable and removes the Escape delay.

